k8s/base/login/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
spec:
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - name: login
        image: login
        ports:
        - containerPort: 5001
