k8s/base/login/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: login
spec:
  selector:
    app.kubernetes.io/name : login
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
