k8s/base/login/http-route-authorize.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: login-authorize-route
spec:
  parentRefs:
    - name: booking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /authorize
      backendRefs:
        - name: login
          port: 80
