k8s/base/login/http-route-login.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: login-route
spec:
  parentRefs:
    - name: booking-app-gateway
      namespace: booking-app-main
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /login
        - path:
            type: PathPrefix
            value: /logout
        - path:
            type: PathPrefix
            value: /authorize
        - path:
            type: PathPrefix
            value: /user
      backendRefs:
        - name: login
          port: 80
